--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,11 @@
         <%= link_to "Project name", "#", class: "navbar-brand" %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+        <p class="navbar-right navbar-text">
+        <% if current_user %>
+          Signed in as <%= current_user.name %>. <%= link_to 'Sign out', signout_url, class: 'navbar-link' %>
+        <% end %>
+        </p>
       </div>
     </div>
   </nav>
@@ -47,6 +47,10 @@
     <% end %>
 
     <%= yield %>
+    
+    <div class="text-right">
+      <a class="text-muted" href="/auth/github">Admin</a>
+    </div>
   </div>
 </body>
 </html>
