--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,11 @@
         <%= link_to "Project name", "#", class: "navbar-brand" %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to 'Services', services_url %></li>
+          <li><%= link_to 'Tiers', tiers_url %></li>
+          <li><%= link_to 'Channels', channels_url %></li>
+        </ul>
         <p class="navbar-right navbar-text">
         <% if current_user %>
           Signed in as <%= current_user.name %>. <%= link_to 'Sign out', signout_url, class: 'navbar-link' %>
