--- a/app/views/tiers/_form.html.erb
+++ b/app/views/tiers/_form.html.erb
@@ -13,9 +13,9 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :service, class: "col-sm-2 control-label" %>
+    <%= f.label :service_id, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :service, class: "form-control" %>
+      <%= f.collection_select :service_id, Service.all, :id, :name, {}, {class: 'form-control'} %>
     </div>
   </div>
   <div class="form-group">
@@ -37,11 +37,22 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :prereq, class: "col-sm-2 control-label" %>
+    <%= f.label :prereq_id, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :prereq, class: "form-control" %>
+      <%= f.collection_select :prereq_id, Tier.all, :id, :name, {include_blank: true}, {class: 'form-control'} %>
     </div>
   </div>
+  <div class="form-group">
+    <%= f.label 'Channels', class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <div class="row">
+        <%= f.collection_check_boxes(:channel_ids, Channel.all, :id, :name, {}, {}) do |b| %>
+        <div class="col-sm-6">
+          <%= b.label { b.check_box + ' ' + b.text} %>
+        </div>
+        <% end %>
+      </div>
+    </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
