--- a/app/views/tiers/show.html.erb
+++ b/app/views/tiers/show.html.erb
@@ -12,7 +12,7 @@
 
 <dl class="dl-horizontal">
   <dt>Service:</dt>
-  <dd><%= @tier.service %></dd>
+  <dd><%= @tier.service.name %></dd>
 
   <dt>Name:</dt>
   <dd><%= @tier.name %></dd>
@@ -24,6 +24,6 @@
   <dd><%= @tier.annual_cost %></dd>
 
   <dt>Prereq:</dt>
-  <dd><%= @tier.prereq %></dd>
+  <dd><%= @tier.prereq ? @tier.prereq.name : 'n/a' %></dd>
 
 </dl>
