--- a/app/views/channels/_form.html.erb
+++ b/app/views/channels/_form.html.erb
@@ -25,6 +25,18 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label 'Tiers', class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <div class="row">
+        <%= f.collection_check_boxes(:tier_ids, Tier.all, :id, :name, {}, {}) do |b| %>
+        <div class="col-sm-6">
+          <%= b.label { b.check_box + ' ' + b.text} %>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
     </div>
