--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Starter Template for Bootstrap</title>
+  <title>Cordcut DB | oddEvan.com</title>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Project name", "#", class: "navbar-brand" %>
+        <%= link_to "Cordcut", root_url, class: "navbar-brand" %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -35,7 +35,7 @@
           <li><%= link_to 'Tiers', tiers_url %></li>
           <li><%= link_to 'Channels', channels_url %></li>
         </ul>
-        <p class="navbar-right navbar-text">
+        <p class="navbar-text">
         <% if current_user %>
           Signed in as <%= current_user.name %>. <%= link_to 'Sign out', signout_url, class: 'navbar-link' %>
         <% end %>
@@ -52,10 +52,6 @@
     <% end %>
 
     <%= yield %>
-    
-    <div class="text-right">
-      <a class="text-muted" href="/auth/github">Admin</a>
-    </div>
   </div>
 </body>
 </html>
