--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,9 +1,11 @@
 <div class="page-header">
+  <% if current_user %>
   <%= link_to new_service_path, class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-plus"></span>
     New Service
   <% end %>
-  <h1>Listing services</h1>
+  <% end %>
+  <h1>All services</h1>
 </div>
 
 <div class="table-responsive">
@@ -12,19 +14,13 @@
       <tr>
             <th>Name</th>
             <th>Description</th>
-            <th></th>
-        <th></th>
-        <th></th>
       </tr>
     </thead>
 
     <tbody>
       <%= content_tag_for(:tr, @services) do |service| %>
-            <td><%= service.name %></td>
+            <td><%= link_to service.name, service %></td>
             <td><%= service.description %></td>
-            <td><%= link_to 'Show', service %></td>
-        <td><%= link_to 'Edit', edit_service_path(service) %></td>
-        <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
     </tbody>
   </table>
