--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -7,14 +7,33 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
-  <h1>Show channel</h1>
+  <h1><%= @channel.name %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt>Name:</dt>
-  <dd><%= @channel.name %></dd>
+<p>
+  <%= raw markdown.render(@channel.description) %>
+</p>
 
-  <dt>Description:</dt>
-  <dd><%= @channel.description %></dd>
+<div class="page-header">
+  <h2>Available through</h2>
+</div>
 
-</dl>
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover">
+    <thead>
+      <tr>
+            <th>Service</th>
+            <th>Tier</th>
+            <th>Annual cost</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <%= content_tag_for(:tr, @channel.tiers) do |tier| %>
+        <td><%= link_to tier.service.name, tier.service %></td>
+        <td><%= tier.name %></td>
+        <td><%= tier.annual_cost %></td>
+      <% end %>
+    </tbody>
+  </table>
+</div>
