--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -25,6 +25,18 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :website, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :website, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :review, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_area :review, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
     </div>
