--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -31,6 +31,18 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :on_demand, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.check_box :on_demand, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :live, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.check_box :live, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label :review, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_area :review, class: "form-control" %>
