--- a/app/views/tiers/_form.html.erb
+++ b/app/views/tiers/_form.html.erb
@@ -31,6 +31,12 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :monthly_cost, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :monthly_cost, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label :annual_cost, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :annual_cost, class: "form-control" %>
