--- a/app/views/tiers/show.html.erb
+++ b/app/views/tiers/show.html.erb
@@ -20,6 +20,9 @@
   <dt>Description:</dt>
   <dd><%= @tier.description %></dd>
 
+  <dt>Monthly cost:</dt>
+  <dd><%= @tier.monthly_cost %></dd>
+
   <dt>Annual cost:</dt>
   <dd><%= @tier.annual_cost %></dd>
 
