--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -60,6 +60,12 @@
     </p>
   <% end %>
   
+  <% if tier.locks.any? %>
+    <h4>Regional channels</h4>
+    <% tier.locks.each do |lock| %>
+    <% end %>
+  <% end %>
+  
   <% if current_user %>
   <%= link_to edit_tier_path(tier), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-pencil"></span>
