--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,23 @@
           <li><%= link_to 'Services', services_url %></li>
           <li><%= link_to 'Channels', channels_url %></li>
         </ul>
-        <p class="navbar-text">
         <% if current_user %>
+        <p class="navbar-text">
           Signed in as <%= current_user.name %>. <%= link_to 'Sign out', signout_url, class: 'navbar-link' %>
-        <% end %>
         </p>
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Services', services_url %></li>
+              <li><%= link_to 'Tiers', tiers_url %></li>
+              <li><%= link_to 'Channels', channels_url %></li>
+              <li><%= link_to 'Regions', regions_url %></li>
+              <li><%= link_to 'Locks', locks_url %></li>
+            </ul>
+          </li>
+        </ul>
+        <% end %>
       </div>
     </div>
   </nav>
