--- a/app/views/tiers/_form.html.erb
+++ b/app/views/tiers/_form.html.erb
@@ -49,6 +49,18 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label 'Regions', class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <div class="row">
+        <%= f.collection_check_boxes(:region_ids, Region.all, :id, :name, {}, {}) do |b| %>
+        <div class="col-sm-6">
+          <%= b.label { b.check_box + ' ' + b.text} %>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label 'Channels', class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <div class="row">
