--- a/app/views/dashboard/compare.html.erb
+++ b/app/views/dashboard/compare.html.erb
@@ -1,5 +1,11 @@
 <h1>Comparing <%= @left_service.name %> and <%= @right_service.name %></h1>
 
+<style type="text/css">
+<% (@left_service.tiers | @right_service.tiers).each do |tier| %>
+.tier<%= tier.id %>-active { color: black; }
+<% end %>
+</style>
+
 <div class="row">
     <div class="col-xs-6">
         <div class="panel panel-default">
@@ -10,7 +16,7 @@
 
             <div class="list-group" id="lefttiers">
             <% @left_service.tiers.each do |tier| %>
-                <label for="<%= "lefttier#{tier.id}" %>" class="list-group-item"><input type="checkbox" id="<%= "lefttier#{tier.id}" %>" onClick="refreshLeft()"> <%= tier.name %></label>
+                <label for="lefttier<%= tier.id %>" class="list-group-item"><input type="checkbox" id="lefttier<%= tier.id %>" onClick="leftTier<%= tier.id %>Checked()"> <%= tier.name %></label>
             <% end %>
             </div>
             
@@ -26,7 +32,7 @@
 
             <div class="list-group" id="righttiers">
             <% @right_service.tiers.each do |tier| %>
-                <label for="<%= "righttier#{tier.id}" %>" class="list-group-item"><input type="checkbox" id="<%= "righttier#{tier.id}" %>" onClick="refreshRight()"> <%= tier.name %></label>
+                <label for="righttier<%= tier.id %>" class="list-group-item"><input type="checkbox" id="righttier<%= tier.id %>" onClick="rightTier<%= tier.id %>Checked()"> <%= tier.name %></label>
             <% end %>
             </div>
             
@@ -35,79 +41,69 @@
     </div>
 </div>
 
+<div class="page-header">
+    <h2>Channels</h2>
+</div>
+
 <div class="row">
     <div class="col-xs-6">
-        <div class="panel panel-info">
-            <div class="panel-heading"><h3 class="panel-title">Channels <span class="badge" id="left_numchannels"></span></h3></div>
-            
-            <ul class="list-group" id="left_channellist">
-            <% @left_channels.each do |channel| %>
-                <li class="list-group-item" class="collapse" id="leftchannel<%= channel.id %>"><%= channel.name %></li>
+        <ul class="list-group text-right" id="left_channellist">
+        <% @all_channels.each do |channel| %>
+            <li class="list-group-item" id="leftchannel<%= channel.id %>">
+            <% if @left_channels.include?(channel) %>
+                <span class="compare-channel <%= channel.css_class %>"><%= channel.name %></span>
+            <% else %>
+                &nbsp;
             <% end %>
-            </ul>
-        </div>
+            </li>
+        <% end %>
+        </ul>
     </div>
     <div class="col-xs-6">
-        <div class="panel panel-info">
-            <div class="panel-heading"><h3 class="panel-title">Channels <span class="badge" id="right_numchannels"></span></h3></div>
-            
-            <ul class="list-group" id="right_channellist">
-            <% @right_channels.each do |channel| %>
-                <li class="list-group-item" class="collapse" id="rightchannel<%= channel.id %>"><%= channel.name %></li>
+        <ul class="list-group" id="right_channellist">
+        <% @all_channels.each do |channel| %>
+            <li class="list-group-item" class="text-muted" id="rightchannel<%= channel.id %>">
+            <% if @right_channels.include?(channel) %>
+                <span class="compare-channel <%= channel.css_class %>"><%= channel.name %></span>
+            <% else %>
+                &nbsp;
             <% end %>
-            </ul>
-        </div>
+            </li>
+        <% end %>
+        </ul>
     </div>
 </div>
 
 <script type="text/javascript">
-
 <% @left_service.tiers.each do |tier| %>
-var lefttier<%= tier.id %> = {
-    cost: <%= tier.monthly_cost %>,
-    channelcount: <%= tier.channels.length() %>,
-    channels: [
-        <% tier.channels.each do |channel| %>
-        '#leftchannel<%= channel.id %>',
+function leftTier<%= tier.id %>Checked() {
+    if($('#lefttier<%= tier.id %>').prop('checked')) {
+        $('#left_channellist .tier<%=tier.id %>').addClass('tier<%= tier.id %>-active');
+        <% if tier.prereq %>
+        $('#lefttier<%= tier.prereq.id %>').prop('checked', 'checked');
+        leftTier<%= tier.prereq.id %>Checked();
         <% end %>
-    ],
-    <% if tier.prereq %>
-    prereq: '#lefttier<%= tier.prereq.id %>',
-    <% end %>
-};
-    
+    } else {
+        $('#left_channellist .tier<%=tier.id %>').removeClass('tier<%= tier.id %>-active');
+    }
+}
+
 <% end %>
-/////////////
+//////////
 
 <% @right_service.tiers.each do |tier| %>
-var righttier<%= tier.id %> = {
-    cost: <%= tier.monthly_cost %>,
-    channelcount: <%= tier.channels.length() %>,
-    channels: [
-        <% tier.channels.each do |channel| %>
-        '#rightchannel<%= channel.id %>',
+function rightTier<%= tier.id %>Checked() {
+    if($('#righttier<%= tier.id %>').prop('checked')) {
+        $('#right_channellist .tier<%=tier.id %>').addClass('tier<%= tier.id %>-active');
+        <% if tier.prereq %>
+        $('#righttier<%= tier.prereq.id %>').prop('checked', 'checked');
+        rightTier<%= tier.prereq.id %>Checked();
         <% end %>
-    ],
-    <% if tier.prereq %>
-    prereq: '#righttier<%= tier.prereq.id %>',
-    <% end %>
-};
-    
+    } else {
+        $('#right_channellist .tier<%=tier.id %>').removeClass('tier<%= tier.id %>-active');
+    }
+}
+
 <% end %>
-////////////
-
-var refreshLeft = function() {
-    var prereqchanged = false;
-    $('#lefttiers input').each(function() {
-    });
-};
-
-var refreshRight = function() {
-};
-
-jQuery(document).ready(function() {
-    refreshLeft();
-    refreshRight();
-});
 
 </script>
