--- a/app/assets/stylesheets/bootstrap-generators.scss
+++ b/app/assets/stylesheets/bootstrap-generators.scss
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import "bootstrap-variables.scss";
 @import "bootstrap-sprockets.scss";
 @import "bootstrap.scss";
