Integrating google font

--- a/app/assets/stylesheets/bootstrap-generators.scss
+++ b/app/assets/stylesheets/bootstrap-generators.scss
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import "bootstrap-variables.scss";
+
+$headings-font-family:    'Montserrat' $font-family-sans-serif;
+$headings-font-weight:    400;
+
 @import "bootstrap-sprockets.scss";
 @import "bootstrap.scss";
 
