--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -47,6 +47,9 @@
   <p><strong>Cost:</strong>
   <% if tier.monthly_cost %>
     <%= tier.monthly_cost %> / month 
+    <% if tier.annual_cost %>
+      or <%= tier.annual_cost %> / year
+    <% end %>
   <% else %>
     <%= tier.annual_cost %> / year
   <% end %>
