--- a/app/views/tiers/show.html.erb
+++ b/app/views/tiers/show.html.erb
@@ -31,4 +31,4 @@
 
 </dl>
 
-<%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Destroy', @tier, method: :delete, data: { confirm: 'Are you sure?' } %>
