--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -10,7 +10,7 @@ television and video providers that are driving the internet-based television wo
     
     <%= raw markdown.render(@service.description) %>
     
-    <p class="text-right"><%= link_to "Learn more about #{service.name}", service, class: 'btn btn-primary' %></p>
+    <p class="text-right"><%= link_to "Learn more about #{@service.name}", @service, class: 'btn btn-primary' %></p>
 </div>
 
 <p><%= link_to 'Browse all services', services_url, class: 'btn btn-default' %></p>
