--- a/app/assets/stylesheets/_ccdb.scss
+++ b/app/assets/stylesheets/_ccdb.scss
@@ -1,8 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
-
-$headings-font-family:    'Montserrat' $font-family-sans-serif;
-$headings-font-weight:    400;
-
 body {
   padding-top: $navbar-height + 10px;
 }
@@ -21,4 +16,8 @@ input[type="radio"], input[type="checkbox"] {
   width: initial;
   height: initial;
   margin-top: 7px;
+}
+
+.compare-channel {
+    color: lightgray;
 }
