--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -7,14 +7,11 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
-  <h1>Show lock</h1>
+  <h1><%= @lock.name %></h1>
 </div>
 
 <dl class="dl-horizontal">
   <dt>Tier:</dt>
   <dd><%= @lock.tier.name %></dd>
-
-  <dt>Region:</dt>
-  <dd><%= @lock.region.name %></dd>
 
 </dl>
