--- a/app/views/locks/_form.html.erb
+++ b/app/views/locks/_form.html.erb
@@ -13,15 +13,27 @@
   <% end %>
 
   <div class="form-group">
+    <%= f.label :name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label :tier_id, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.collection_select :tier_id, Tier.all, :id, :name, {}, {class: 'form-control'} %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :region_id, class: "col-sm-2 control-label" %>
+    <%= f.label 'Regions', class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.collection_select :region_id, Region.all, :id, :name, {}, {class: 'form-control'} %>
+      <div class="row">
+        <%= f.collection_check_boxes(:region_ids, Region.all, :id, :name, {}, {}) do |b| %>
+        <div class="col-sm-6">
+          <%= b.label { b.check_box + ' ' + b.text} %>
+        </div>
+        <% end %>
+      </div>
     </div>
   </div>
   <div class="form-group">
