--- a/app/assets/stylesheets/_bootstrap.scss
+++ b/app/assets/stylesheets/_bootstrap.scss
@@ -26,7 +26,7 @@
 @import "bootstrap/buttons";
 
 // Components
-//@import "bootstrap/component-animations";
+@import "bootstrap/component-animations";
 @import "bootstrap/dropdowns";
 //@import "bootstrap/button-groups";
 @import "bootstrap/input-groups";
@@ -51,7 +51,7 @@
 // Components w/ JavaScript
 //@import "bootstrap/modals";
 //@import "bootstrap/tooltip";
-//@import "bootstrap/popovers";
+@import "bootstrap/popovers";
 //@import "bootstrap/carousel";
 
 // Utility classes
