Removing dishonorable mentions

--- a/app/views/dashboard/faq.html.erb
+++ b/app/views/dashboard/faq.html.erb
@@ -49,8 +49,12 @@ Regarding rule 3:
 
 In addition to the usual suspects of traditional cable and satellite operators (who
 by nature fail rules 1 and 2 and are generally bad about rule 3),
-we have a list of [dishonorable mentions](/dishonorable-mentions/) for services
-that _sound_ like they should be in the list and... well, aren't.
+there are a number of new streaming services that are offered by traditional cable
+providers limited to their services. While there have the advantage of modern delivery
+and no cable boxes, they still violate rule 1.
+
+[ESPN 3](http://espn3.com/) also violates rule 1 since it requires a participating ISP
+to provide access and there is no way to pay for the service directly.
 
 ## Who maintains this database? ##
 
