--- a/app/assets/stylesheets/_ccdb.scss
+++ b/app/assets/stylesheets/_ccdb.scss
@@ -21,3 +21,7 @@ input[type="radio"], input[type="checkbox"] {
 .compare-channel {
     color: lightgray;
 }
+
+.table .label {
+  font-size: 12px;
+}
