--- a/app/views/tiers/_tier.html.erb
+++ b/app/views/tiers/_tier.html.erb
@@ -44,8 +44,20 @@
             <tbody>
             <%= content_tag_for(:tr, tier.locks) do |lock| %>
                 <td>
-                <% lock.regions.each do |region| %>
-                    <%= link_to region.name, region, class: 'label label-default' %>
+                <% if lock.regions.count > 7 %>
+                    <%= lock.summary %>
+                    <button class="btn btn-small btn-primary" type="button" data-toggle="collapse" data-target="#lock<%= lock.id %>regions" aria-expanded="false" aria-controls="lock<%= lock.id %>regions">
+                    Show all markets
+                    </button>
+                    <div class="collapse" id="lock<%= lock.id %>regions">
+                    <% lock.regions.each do |region| %>
+                        <%= link_to region.name, region, class: 'label label-default' %>
+                    <% end %>
+                    </div>
+                <% else %>
+                    <% lock.regions.each do |region| %>
+                        <%= link_to region.name, region, class: 'label label-default' %>
+                    <% end %>
                 <% end %>
                 </td>
                 <td>
