Fixing button size

--- a/app/views/tiers/_tier.html.erb
+++ b/app/views/tiers/_tier.html.erb
@@ -46,7 +46,7 @@
                 <td>
                 <% if lock.regions.count > 7 %>
                     <%= lock.summary %>
-                    <button class="btn btn-small btn-primary" type="button" data-toggle="collapse" data-target="#lock<%= lock.id %>regions" aria-expanded="false" aria-controls="lock<%= lock.id %>regions">
+                    <button class="btn btn-xs btn-primary" type="button" data-toggle="collapse" data-target="#lock<%= lock.id %>regions" aria-expanded="false" aria-controls="lock<%= lock.id %>regions">
                     Show all markets
                     </button>
                     <div class="collapse" id="lock<%= lock.id %>regions">
