--- a/app/assets/stylesheets/_ccdb.scss
+++ b/app/assets/stylesheets/_ccdb.scss
@@ -28,8 +28,9 @@ input[type="radio"], input[type="checkbox"] {
 
 div.tier {
   border-left: 5px solid $brand-info;
-  border-bottom: 1px solid $brand-info;
+  border-bottom: 5px solid $brand-info;
   padding-left: ($grid-gutter-width / 2);
+  margin-bottom: ($grid-gutter-width / 2);
   
   div.tier {
     border-color: $brand-primary;
