Adding titles and fixing prices on compare (kinda)

--- a/app/assets/stylesheets/_ccdb.scss
+++ b/app/assets/stylesheets/_ccdb.scss
@@ -19,7 +19,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .compare-channel {
-    color: $text-muted;
+    color: lighten($text-muted, 20%);
 }
 
 .table .label {
