--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Channels' %>
+
 <div class="page-header">
   <% if current_user %>
   <%= link_to new_channel_path, class: 'btn btn-primary' do %>
