--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, @service.name %>
+
 <div class="page-header">
   <%= link_to services_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
