--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, @region.name %>
+
 <div class="page-header">
   <%= link_to regions_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
