--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title><%= (yield(:title) + " - " unless yield(:title).blank?).to_s + "Cordcut DB" %></title>
+  <title><%= (yield(:title) + " - " unless yield(:title).blank?).to_s + "Cordcut DB (beta)" %></title>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Cordcut DB", root_url, class: "navbar-brand" %>
+        <%= link_to "Cordcut DB (beta)", root_url, class: "navbar-brand" %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
