--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -40,6 +40,38 @@
 </div>
 <% end %>
 
+<% if @service.live %>
+<div class="well">
+  <div class="row">
+    <div class="col-sm-4 col-md-3">
+      Compare <%= @service.name %> with
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <select id="compareDropdown" class="form-control">
+      <% Service.where(live: true).each do |service| %>
+        <option value="<%=service.slug %>"><%= service.name %></option>
+      <% end %>
+      </select>
+    </div>
+    <div class="col-sm-2 col-md-offset-3">
+      <a href="#" id="compareLink" class="btn btn-primary disabled">Compare</a>
+    </div>
+  </div>
+</div>
+<script type="text/javascript">
+var updateLink = function() {
+  var newLink = '<%= "#{root_url}compare/#{@service.slug}/" %>';
+  newLink += $('#compareDropdown').val();
+  
+  $('#compareLink').removeClass('disabled');
+  $('#compareLink').attr('href', newLink);
+};
+
+$('document').ready(updateLink);
+$('#compareDropdown').change(updateLink);
+</script>
+<% end %>
+
 <div class="page-header">
   <h2>Available Tiers</h2>
 </div>
