--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to 'Services', services_url %></li>
           <li><%= link_to 'Channels', channels_url %></li>
+          <li><%= link_to 'Articles', articles_url %></li>
           <li><%= link_to 'FAQ', faq_url %></li>
         </ul>
         <% if current_user %>
@@ -48,6 +49,7 @@
               <li><%= link_to 'Channels', channels_url %></li>
               <li><%= link_to 'Regions', regions_url %></li>
               <li><%= link_to 'Locks', locks_url %></li>
+              <li><%= link_to 'Articles', articles_url %></li>
             </ul>
           </li>
         </ul>
