--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,6 +14,7 @@
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+  <p class="text-muted">Posted on <%= @article.created_at.strftime('%B %-d, %Y') %>
   
   <%= raw markdown.render(@article.body) %>
   
