--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,28 @@
     <%= yield %>
   
     <div class="well well-sm text-center">
+      <div class="row">
+        <!-- Begin MailChimp Signup Form -->
+        <form action="//eph.us8.list-manage.com/subscribe/post?u=a62da69dfecdc06bb53d589be&amp;id=71dd17d81d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div class="col-sm-6 text-right">
+	        <h2 style="margin-top: 0;">Subscribe to our mailing list</h2>
+          <p>Powered by <a href="http://eepurl.com/blDLVj" title="MailChimp - email marketing made easy and fun">MailChimp</a></p>
+        </div>
+        <div class="col-sm-4 text-left mc-field-group">
+	        <label for="mce-EMAIL" class="sr-only">Email Address </label>
+	        <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="Email address" id="mce-EMAIL">
+        </div>
+        <div class="col-sm-2">
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a62da69dfecdc06bb53d589be_71dd17d81d" tabindex="-1" value=""></div>
+          <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
+        </div>
+        </form>
+        <!--End mc_embed_signup-->
+      </div>
+      
+      <div class="clearfix"></div>
+      <hr>
+    
       <p>&copy; <a href="http://eph.me/">Evan Hildreth</a>.<br>
       <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Content licensed under a Creative Commons Attribution-Share Alike 4.0 International License</a>.<br>
       <a href="http://github.com/oddevan/cordcutdb/">Source code available on GitHub.</a><br>
