Amending rule 1 to disqualify NFL Sunday Ticket

--- a/app/views/dashboard/faq.html.erb
+++ b/app/views/dashboard/faq.html.erb
@@ -12,7 +12,7 @@ television and video providers that are driving the internet-based television wo
 
 There are (currently) 3 rules to be in the database:
 
-1. Service is available regardless of internet provider.
+1. Service is available regardless of internet provider or other available services.
 2. Service should not require single-purpose equipment.
 3. Service has clear out-of-contract pricing.
 
@@ -23,6 +23,7 @@ Sure!
 Regarding rule 1:
 
 - If a service requires internet service from a particular provider, it is disqualified.
+- If a service is only availble to people who are unable to purchase a different service, it is disqualified.
 - This doesn't disqualify things like address-based or region-based access. That's an
   unfortunate reality of the TV world right now. It will go away eventually, but I say
   we pick a different battle first.
@@ -57,6 +58,10 @@ and no cable boxes, they still violate rule 1.
 
 [ESPN 3](http://espn3.com/) also violates rule 1 since it requires a participating ISP
 to provide access and there is no way to pay for the service directly.
+
+[NFL Sunday Ticket.TV](http://nflsundayticket.tv) violates rule 1 since it is only
+available to customers who cannot (for geographic or home ownership reasons) subscribe
+to DIRECTV.
 
 ## Who maintains this database? ##
 
