Giving up and removing region and related stuff.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,6 @@
               <li><%= link_to 'Services', services_url %></li>
               <li><%= link_to 'Tiers', tiers_url %></li>
               <li><%= link_to 'Channels', channels_url %></li>
-              <li><%= link_to 'Regions', regions_url %></li>
-              <li><%= link_to 'Locks', locks_url %></li>
               <li><%= link_to 'Articles', articles_url %></li>
             </ul>
           </li>
@@ -92,8 +90,7 @@
     
       <p>&copy; <a href="http://eph.me/">Evan Hildreth</a>.<br>
       <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Content licensed under a Creative Commons Attribution-Share Alike 4.0 International License</a>.<br>
-      <a href="http://github.com/oddevan/cordcutdb/">Source code available on GitHub.</a><br>
-      <a href="https://en.wikipedia.org/wiki/List_of_United_States_television_markets">Television market information from Wikipedia.</a></p>
+      <a href="http://github.com/oddevan/cordcutdb/">Source code available on GitHub.</a></p>
       
       <p><a href="mailto:me@eph.me?subject=<%= url_encode('Cordcut DB Feedback') %>&amp;body=<%= url_encode("Feedback on the page at #{request.original_url}") %>" class="btn btn-default">Send feedback</a></p>
     </div>
