Adding under construction thing

--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -4,13 +4,9 @@
 television and video providers that are driving the internet-based television world forward.</p>
 
 <div class="jumbotron">
-    <p>Try this random service</p>
+    <h2>Under Construction</h2>
     
-    <h2><%= @service.name %></h2>
-    
-    <%= raw markdown.render(@service.description) %>
-    
-    <p class="text-right"><%= link_to "Learn more about #{@service.name}", @service, class: 'btn btn-primary' %></p>
+    <p>We are refocusing Cordcut DB on cable-like streaming services. Expect lots of broken links as we rebuild pretty much everything.</p>
 </div>
 
 <div class="row">
